fix title layout of view post page, add toolbar items

--- a/app/src/styles/page-header.less
+++ b/app/src/styles/page-header.less
@@ -9,9 +9,14 @@
   box-sizing: border-box;
   max-height: 100px;
   transition: max-height 500ms, border-bottom 500ms;
+  overflow: hidden;
 
   > .page-title {
     -webkit-flex: 1;
+    flex: 1;
+  }
+
+  > .tool-bar {
     flex: 1;
   }
 
